[package]
name = "ev-planner"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.27.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = ["trace", "http-proto", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.28.0", features = ["metrics"] }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["trace"] }
tower = "0.4"
hyper = { version = "1.0", features = ["http1", "server"] }
serde_json = "1.0"
